styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");

:root {
  --color-main-bg: hsl(233, 47%, 7%);
  --color-card-bg: hsl(244, 38%, 16%);
  --color-accent: hsl(277, 64%, 61%);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Inter", sans-serif;
  background-color: var(--color-main-bg);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  font-size: 1.5rem;
}

.card {
  width: 85%;
  min-width: 300px;
  max-width: 400px;
  background-color: var(--color-card-bg);
  border-radius: 12px;
  overflow: hidden;
}

.card__image-container {
  position: relative;
}

.card__image-container::after {
  content: "";
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(hsl(277, 74%, 31%, 60%), hsl(277, 74%, 31%, 60%));
}

.card__image {
  width: 100%;
  height: 100%;
  display: block;
}

.card__text-content {
  padding: 3.2rem;
  text-align: center;
}

.card__title {
  color: hsl(0, 0%, 100%);
  margin-bottom: 2rem;
  font-size: 2.6rem;
  font-weight: 600;
}

.card__description {
  color: hsla(0, 0%, 100%, 0.75);
  margin-bottom: 3.6rem;
  line-height: 1.5;
}

.title-word {
  color: var(--color-accent);
}

.card__stats {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 2.4rem;
}

.stat-heading {
  color: hsla(0, 0%, 100%);
  margin-bottom: 6px;
  font-size: 2.6rem;
  font-weight: 600;
}

.stat-text {
  text-transform: uppercase;
  font-family: "Lexend Deca", sans-serif;
  color: hsla(0, 0%, 100%, 0.6);
}

@media screen and (min-width: 768px) {
  .card {
    display: flex;
    flex-direction: row-reverse;
    min-width: 700px;
    max-width: 800px;
    border-radius: 10px;
  }

  .card__image {
    object-fit: cover;
    /* object-position: center; */
  }

  .card__text-content {
    text-align: left;
    padding: 4rem;
    flex-basis: 50%;
  }

  .card__image-container {
    flex-basis: 50%;
  }

  .card__title {
    font-size: 2.8rem;
  }
  .card__description {
    margin-bottom: 5rem;
  }

  .stat-heading {
    font-size: 1.6rem;
  }

  .stat-text {
    font-size: 1rem;
  }

  .card__stats {
    flex-direction: row;
    justify-content: flex-start;
  }
}

